# parallel

./: .Setup.hs.swp  .gitignore  .parallel.cabal.swp  .travis.yml  README.md  cabal.haskell-ci  changelog  changelog.md  parallel.cabal
.github/workflows/: ci.yaml  haskell-ci.yml
Control/: .Seq.hs.swp  Parallel.hs  Seq.hs
Control/Parallel/: Strategies.hs
Control/Parallel/Strategies/: Poly.hs
tests/: Main.hs  Makefile  Par.hs  Seq.hs  Util.hs  all.T  par004.hs  par004.stdout  pareval.hs  pareval.stdout  rparWith_r0.hs  rparWith_r0.stdout
tests/2185/: 2185.hs  Makefile  all.T
